@@ -1,6 +1,10 @@
 Cobertura - http://cobertura.sourceforge.net/
 
+List of all contributors to Cobertura
+Listed alphabetically by last name
+
 Copyright (C) 2005 Björn Beskow       <bbeskow a.t users d.o.t sourceforge d.o.t net>
+Copyright (C) 2006 Matt Cordes        <mcordes a.t visa d.o.t com>
 Copyright (C) 2005 Erik Dick          <erdick a.t users d.o.t sourceforge d.o.t net>
 Copyright (C) 2005 Mark Doliner       <thekingant a.t users d.o.t sourceforge d.o.t net>
 Copyright (C) 2005 Joakim Erdfelt     <joakim a.t erdfelt d.o.t net>
